# ComfyUI-External-Lora-Loader

./: .gitignore  LICENSE  PRD.md  README.md  __init__.py  api.py  api_spec.yaml  cache.py  constraints.md  logic_flow.md  nodes.py  pyproject.toml  state.json
docs/superpowers/plans/: 2026-04-16-file-browser-explorer-style.md  2026-04-18-meta-popup-draggable-resizable.md
docs/superpowers/specs/: 2026-04-16-file-browser-explorer-style-design.md  2026-04-18-meta-popup-draggable-resizable-design.md
examples/: README.md
web/: ext.js
