[project]
name = "comfyui-external-lora-loader"
description = "Load LoRA files from any path on any mounted drive, with a tree-style file browser and LRU RAM cache."
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = ["psutil"]

[project.urls]
Repository = "https://github.com/comfyuiattic-989/ComfyUI-External-Lora-Loader"

[tool.comfy]
PublisherId = "comfyui-attic"
DisplayName = "External LoRA Loader"
Icon = "https://avatars.githubusercontent.com/u/273807868?v=4&size=512"
